role,menu db func
